changed capitalization on worker's My Account page

--- a/client/templates/workers/myAccount.html
+++ b/client/templates/workers/myAccount.html
@@ -11,55 +11,55 @@
     <tr>
       <td>First Name</td>
       <td editable-text="workerData.firstName" onaftersave="postWorkerData('firstName', workerData.firstName)">
-        {{ workerData.firstName || 'Enter your First Name' }}
+        {{ workerData.firstName || 'Enter your first name.' }}
       </td>
     </tr>
     <tr>
       <td>Last Name</td>
       <td editable-text="workerData.lastName" onaftersave="postWorkerData('lastName', workerData.lastName)">
-        {{ workerData.lastName || 'Enter your Last Name' }}
+        {{ workerData.lastName || 'Enter your last name.' }}
       </td>
     </tr>
     <tr>
       <td>Phone</td>
       <td editable-text="workerData.phone" onaftersave="postWorkerData('phone', workerData.phone)">
-        {{ workerData.phone || 'Enter your Phone Number' }}
+        {{ workerData.phone || 'Enter your phone number.' }}
       </td>
     </tr>
     <tr>
       <td>Email</td>
       <td editable-text="workerData.email" onaftersave="postWorkerData('email', workerData.email)">
-        {{ workerData.email || 'Enter your Email' }}
+        {{ workerData.email || 'Enter your email address.' }}
       </td>
     </tr>
     <tr>
       <td>Department Name</td>
       <td editable-text="workerData.department" onaftersave="postWorkerData('department', workerData.department)">
-        {{ workerData.department || 'Enter your Department' }}
+        {{ workerData.department || 'Enter your department.' }}
       </td>
     </tr>
     <tr>
       <td>Supervisor's First Name</td>
       <td editable-text="workerData.supervisorFirstName" onaftersave="postWorkerData('supervisorFirstName', workerData.supervisorFirstName)">
-        {{ workerData.supervisorFirstName || 'Enter your Supervisor\'s First Name' }}
+        {{ workerData.supervisorFirstName || 'Enter your supervisor\'s first name.' }}
       </td>
     </tr>
     <tr>
       <td>Supervisor's Last Name</td>
       <td editable-text="workerData.supervisorLastName" onaftersave="postWorkerData('supervisorLastName', workerData.supervisorLastName)">
-        {{ workerData.supervisorLastName || 'Enter your Supervisor\'s Last Name' }}
+        {{ workerData.supervisorLastName || 'Enter your supervisor\'s fast name.' }}
       </td>
     </tr>
     <tr>
       <td>Coordinator's First Name</td>
       <td editable-text="workerData.coordinatorFirstName" onaftersave="postWorkerData('coordinatorFirstName', workerData.coordinatorFirstName)">
-        {{ workerData.coordinatorFirstName || 'Enter your Coordinator\'s First Name' }}
+        {{ workerData.coordinatorFirstName || 'Enter your coordinator\'s first name.' }}
       </td>
     </tr>
     <tr>
       <td>Coordinator's Last Name</td>
       <td editable-text="workerData.coordinatorLastName" onaftersave="postWorkerData('coordinatorLastName', workerData.coordinatorLastName)">
-        {{ workerData.coordinatorLastName || 'Enter your Coordinator\'s Last Name' }}
+        {{ workerData.coordinatorLastName || 'Enter your coordinator\'s last name.' }}
       </td>
     </tr>
   </tbody>
