--- a/client/templates/admin/account/users.html
+++ b/client/templates/admin/account/users.html
@@ -1,4 +1,4 @@
-<h1>User Data ({{numUsers}})</h1>
+<h1>{{userType}} Accounts</h1>
 
 <form class="form-inline" ng-submit="fetchUsers(1)" ng-show="workerPage">
   <input placeholder="Search by Last Name" class="form-control" ng-model="userQuery">
