--- a/client/templates/admin/account/users.html
+++ b/client/templates/admin/account/users.html
@@ -9,7 +9,7 @@
   <input ng-show="!workerPage" ng-model="query" class="form-control" placeholder="Smart Search"/>
 </form>
 
-<ul class="pagination" ng-show="pages && pages.length > 1">
+<ul class="pagination" ng-show="pages && pages.legingth > 1">
   <li ng-class="page === 1 ? 'disabled' : ''"><a href="#" ng-click="(page - 1) > 0 && fetchUsers(page - 1)">&laquo;</a></li>
   <li ng-repeat="pageNumber in pages" ng-click="fetchUsers(pageNumber)" ng-class="page === pageNumber ? 'active': ''"><a href="#">{{pageNumber}}</a></li>
   <li ng-class="page === pages.length ? 'disabled' : ''"><a href="#" ng-click="(page + 1) <= pages.length && fetchUsers(page + 1)">&raquo;</a></li>
