--- a/client/templates/workers/childrenFeed.html
+++ b/client/templates/workers/childrenFeed.html
@@ -26,8 +26,11 @@
     <div class="panel-heading">
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{child.id}}">
-          <span class="child-meta">{{child.firstName}} {{child.lastName}} ( {{child.cfid}} )</span>
+          <span class="child-meta">
+          {{child.firstName}} {{child.lastName}} ( {{child.cfid}} ) 
+          </span>
           <span class="child-status" ng-class="child.status ? 'pledged' : 'not-pledged'">{{child.status ? 'Pledged' : 'Not Pledged'}}</span>
+          <span style="float: right"> Created: {{ child.createdAt | date:'short' }}</span>
         </a>
       </h4>
     </div>
@@ -194,7 +197,7 @@
                   <br/>
                   Donation Method: <span editable-select="childsDonor.paymentMethod" e-ng-options="s.value as s.text for s in paymentMethods" onaftersave="updateDonor(childsDonor.id, 'paymentMethod', childsDonor.paymentMethod)">{{ childsDonor.paymentMethod }}</span>
                   <br/>
-                  Donation Time: {{ childsDonor.createdAt | date:'short' }}
+                  Donation Date: {{ childsDonor.createdAt | date:'shortDate' }}
                 </td>
               </tr>
             </tbody>
@@ -236,7 +239,6 @@
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         <button type="button" class="deleteBtn btn btn-danger" ng-click="unpledge(modalChild, deleteConfirm)" ng-show="!(modalChild.waitDelete)" ng-disabled="modalChild.waitDelete === 1">Delete</button>
         <button class="deleteBtn btn btn-success" ng-show="modalChild.waitDelete === 2" data-dismiss="modal">Donor Removed</button>
-    <!--     <button ng- type="button" data-dismiss="modal">Exit</button> -->
       </div>
     </div>
   </div>
