--- a/client/templates/admin/workers.html
+++ b/client/templates/admin/workers.html
@@ -1,4 +1,4 @@
-<h1>List of Workers ({{numWorkers}})</h1>
+<h1>List of Staff</h1>
 
 <form class="form-inline" ng-submit="fetchAllWorkers(1)">
   <input placeholder="Search by Last Name" class="form-control" ng-model="userQuery">
