--- a/client/templates/public/home.html
+++ b/client/templates/public/home.html
@@ -14,7 +14,7 @@
       <div class="tbl-row">
 
         <div class="box-image">
-          <img class="image-child" src="/images/{{child.image}}"/>
+          <img class="image-child" ng-src="/images/{{ child.gender }}/{{ child.image }}"/>
         </div>
 
         <div class="box-content">
