--- a/client/assets/stylesheets/style.css
+++ b/client/assets/stylesheets/style.css
@@ -234,3 +234,9 @@ html, body {
   margin: 10px;
   width: 95%;
 }
+
+.readable {
+  color: black;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 16px;
+}
