--- a/client/templates/admin/account/users.html
+++ b/client/templates/admin/account/users.html
@@ -17,7 +17,7 @@
 
 <table class="table table-striped pad-top">
   <tr><th>User ID</th><th>Email</th><th>Privileges</th><th>Send Reset Email</th></tr>
-  <tr ng-repeat="user in users | filter:query"><td>{{ user.id }}</td><td>{{ user.email }}</td>
+  <tr ng-repeat="user in users | filter:query"><td>{{ user.id }}</td><td class="readable">{{ user.email }}</td>
     <td>
       <button class="btn btn-primary" ng-click="grantAccess(user)" ng-hide="user.hasAccess" ng-disabled="user.waitAccess === 1">Grant Access</button>
       <button class="btn btn-danger" ng-click="revokeAccess(user)" ng-show="user.hasAccess" ng-disabled="user.waitAccess === 1">Revoke Access</button>
