--- a/client/templates/admin/workers.html
+++ b/client/templates/admin/workers.html
@@ -23,17 +23,17 @@
     <div id="collapse{{worker.id}}" class="panel-collapse collapse">
       <div class="panel-body">
         <table class="table">
-          <tr><th>Name</th><td>{{worker.firstName}} {{worker.lastName}}</td></tr>
-          <tr><th>Email</th><td>{{worker.email || 'N/A'}}</td></tr>
-          <tr><th>Phone Number</th><td>{{worker.phone || 'N/A'}}</td></tr>
-          <tr><th>Department</th><td>{{worker.department || 'Test'}}</td></tr>
-          <tr><th>Supervisor</th><td>{{(worker.supervisorFirstName && worker.supervisorLastName) ? worker.supervisorFirstName + ' ' + worker.supervisorLastName : 'N/A'}}</td></tr>
-          <tr><th>Coordinator</th><td>{{(worker.coordinatorFirstName && worker.coordinatorLastName) ? worker.coordinatorFirstName + ' ' + worker.coordinatorLastName : 'N/A'}} {{worker.coordinatorLastName}}</td></tr>
+          <tr><th>Name</th><td class="readable">{{worker.firstName}} {{worker.lastName}}</td></tr>
+          <tr><th>Email</th><td class="readable">{{worker.email || 'N/A'}}</td></tr>
+          <tr><th>Phone Number</th><td class="readable">{{worker.phone || 'N/A'}}</td></tr>
+          <tr><th>Department</th><td class="readable">{{worker.department || 'Test'}}</td></tr>
+          <tr><th>Supervisor</th><td class="readable">{{(worker.supervisorFirstName && worker.supervisorLastName) ? worker.supervisorFirstName + ' ' + worker.supervisorLastName : 'N/A'}}</td></tr>
+          <tr><th>Coordinator</th><td class="readable">{{(worker.coordinatorFirstName && worker.coordinatorLastName) ? worker.coordinatorFirstName + ' ' + worker.coordinatorLastName : 'N/A'}} {{worker.coordinatorLastName}}</td></tr>
           <tr ng-show="worker.children"><th>Children</th><th>First Name</th><th>Last Name</th><th></th></tr>
           <tr ng-repeat="child in worker.children">
             <td></td>
-            <td>{{child.firstName}}</td>
-            <td>{{child.lastName}}</td>
+            <td class="readable">{{child.firstName}}</td>
+            <td class="readable">{{child.lastName}}</td>
             <td><button class="btn btn-primary" data-toggle="modal" data-target="#myModal" ng-click="setChildForModal(child, worker)">Change Worker</button></td>
           </tr>
         </table>
