--- a/client/templates/helpDesk/account.html
+++ b/client/templates/helpDesk/account.html
@@ -5,13 +5,13 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a ui-sref="helpDesk.account.accountManagement.create">Add New User</a></li>
-        <li><a ui-sref="helpDesk.account.accountManagement.workers">Show Worker Accounts</a></li>
-        <li><a ui-sref="helpDesk.account.accountManagement.admin">Show Admin Accounts</a></li>
-        <li><a ui-sref="helpDesk.account.accountManagement.helpDesk">Show Help Desk Accounts</a></li>
+        <li><a ui-sref="helpDesk.account.accountManagement.create" class="readable">Add New User</a></li>
+        <li><a ui-sref="helpDesk.account.accountManagement.workers" class="readable">Show Worker Accounts</a></li>
+        <li><a ui-sref="helpDesk.account.accountManagement.admin" class="readable">Show Admin Accounts</a></li>
+        <li><a ui-sref="helpDesk.account.accountManagement.helpDesk" class="readable">Show Help Desk Accounts</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a ui-sref="helpDesk.signout">Sign Out</a></li>
+        <li><a ui-sref="helpDesk.signout" class="readable">Sign Out</a></li>
       </ul>
     </div>
   </div>
