--- a/client/assets/stylesheets/style.css
+++ b/client/assets/stylesheets/style.css
@@ -1,6 +1,6 @@
 /* BEGIN Public Facing Home Page Additions BEGIN */
 html, body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Helvetica', 'Arial', sans-serif;
   font-weight: 100;
   color: #686868;
   background-color: #f7f7f7;
