--- a/client/templates/public/home.html
+++ b/client/templates/public/home.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-md-10 col-xs-12 col-centered">
       <div class="col-xs-6 box-header"><img class="header-logo" src="/assets/images/hsf_logo.png"></div>
-      <div class="col-xs-6 box-tagline text-right">a tagline for the county (optional)</div>
+      <div class="col-xs-6 box-tagline text-right">Donate to Kids in San Mateo County</div>
     </div>
   </div>
 
