added spam folder warning to email notification views

--- a/client/templates/public/pledge.html
+++ b/client/templates/public/pledge.html
@@ -4,7 +4,7 @@
   </h2>
   <div ng-show="confirmation">
      <div class="alert alert-success">
-        Your donation request has been submitted!  Please record your confirmation key as it will be used for your tax-benefit: <strong>{{ currentChild.cfid }}</strong> Please check your email for further instructions.  <a ui-sref="root">Click here to return home</a>
+        Your donation request has been submitted!  Please record your confirmation key as it will be used for your tax-benefit: <strong>{{ currentChild.cfid }}</strong> Please check your email for further instructions.  (Emails can sometimes appear in your spam folder.)  <a ui-sref="root">Click here to return home</a>
     </div>
   </div>
   <form name="donor_info" role="form" novalidate ng-submit="donorSubmit()">
