Add UX to buttons on authentication (give some feedback when submitting)

--- a/client/templates/authentication/resetPasswordView.html
+++ b/client/templates/authentication/resetPasswordView.html
@@ -11,7 +11,9 @@
     <form ng-submit="resetPassword()">
       <input placeholder="password" type="password" ng-model="password" class="form-control">
       <input placeholder="confirm password" type="password" ng-model="passwordConfirmation" class="form-control">
-      <input type="submit" class="form-control btn-primary">
+      <input type="submit" class="form-control btn-primary" ng-disabled="waitAuth === 1" ng-hide="!waitAuth">
+      <button type="submit" class="form-control btn-primary" ng-show="waitAuth === 1" disabled>Sending Email</button>
+      <button type="submit" class="form-control btn-success" ng-show="waitAuth === 2" disabled>Email Sent!</button>
     </form>
   </div>
   <div class="col-md-4"></div>
