added header div for optional blurb (updated in readme); added explicit instructions for CFID on delivery of donation

--- a/client/templates/public/confirmationEmail.html
+++ b/client/templates/public/confirmationEmail.html
@@ -21,7 +21,7 @@ This will be deleted for production, but must remain in the meantime to help cre
     1 Davis Drive<br/>
     Belmont, CA 94002<br/>
   </p>
-  <p>For your records, please keep your donation number in a safe place:</p>
+  <p><strong>Please include this number with your cash donation</strong></p>
   <H2>' + childObj.cfid + '</H2>
   <p>This number will allow you to receive your tax benefit.</p>
   <p>If you have any questions, please contact us at <a href="mailto:childrensfund@smchsa.org">childrensfund@smchsa.org</a> or by phone at (650) 802-5152.</p>
@@ -51,7 +51,7 @@ This will be deleted for production, but must remain in the meantime to help cre
   1 Davis Drive<br/>
   Belmont, CA 94002<br/>
   </p>
-  <p>For your records, please keep your donation number in a safe place:</p>
+  <p><strong>Please write the following number on the notes of your check:</strong></p>
   <H2>' + childObj.cfid + '</H2>
   <p>This number will allow you to receive your tax benefit.</p>
   <p>If you have any questions, please contact us at <a href="mailto:childrensfund@smchsa.org">childrensfund@smchsa.org</a> or by phone at (650) 802-5152.</p>
@@ -79,7 +79,8 @@ This will be deleted for production, but must remain in the meantime to help cre
         <br/>1 Davis Drive
         <br/>Belmont, CA 94002
         <br/>
-    </p><strong>Please include the following number with your package of items:</strong>
+    </p>
+    <p><strong>Please include the following number with your package of items:</strong></p>
     <H2>' + childObj.cfid + '</H2>
     <p>This number will allow you to receive your tax benefit.</p>
     <p>If you have any questions, please contact us at <a href="mailto:childrensfund@smchsa.org">childrensfund@smchsa.org</a> or by phone at (650) 802-5152.</p>
