--- a/client/templates/workers/childrenFeed.html
+++ b/client/templates/workers/childrenFeed.html
@@ -162,6 +162,7 @@
                     <option value="0" ng-selected="child.hsaStatus === 0">Not Received</option>
                     <option value="1" ng-selected="child.hsaStatus === 1">Received</option>
                     <option value="2" ng-selected="child.hsaStatus === 2">Complete</option>
+                    <option value="3" ng-selected="child.hsaStatus === 3">Inactive</option>
                   </select>
                 </td>
               </tr>
