childrenFeed.html bios are now word-wrapped; width is now 100%

--- a/client/templates/workers/childrenFeed.html
+++ b/client/templates/workers/childrenFeed.html
@@ -204,16 +204,14 @@
             </tbody>
           </table>
           <div class="center">
-            <div class="col-md-3"></div>
-            <div class="col-md-6">
+            <div class="col-md-12">
               <div class="panel panel-default">
                 <div class="panel-heading">{{child.firstName}}'s Bio (Click text to edit)</div>
-                <div class="panel-body">
-                  <p editable-text="child.bio" onaftersave="update(child.id, 'bio', child.bio)">{{ child.bio }}</p>
+                <div class="panel-body wordwrap">
+                  <p editable-textarea="child.bio" onaftersave="update(child.id, 'bio', child.bio)" e-rows="7" e-cols="40">{{ child.bio }}</p>
                 </div>
               </div>
             </div>
-            <div class="col-md-3"></div>
           </div>
         </div>
 
