--- a/client/assets/stylesheets/style.css
+++ b/client/assets/stylesheets/style.css
@@ -194,6 +194,14 @@ html, body {
   color: grey;
 }
 
+.wordwrap { 
+  white-space: pre-wrap;      /* CSS3 */   
+  white-space: -moz-pre-wrap; /* Firefox */    
+  white-space: -pre-wrap;     /* Opera <7 */   
+  white-space: -o-pre-wrap;   /* Opera 7 */    
+  word-wrap: break-word;      /* IE */
+}
+
 /* Admin Dashboard Styles */
 #internal-navigation{
 
