--- a/client/templates/admin/workers.html
+++ b/client/templates/admin/workers.html
@@ -29,9 +29,9 @@
           <tr><th>Department</th><td class="readable">{{worker.department || 'Test'}}</td></tr>
           <tr><th>Supervisor</th><td class="readable">{{(worker.supervisorFirstName && worker.supervisorLastName) ? worker.supervisorFirstName + ' ' + worker.supervisorLastName : 'N/A'}}</td></tr>
           <tr><th>Coordinator</th><td class="readable">{{(worker.coordinatorFirstName && worker.coordinatorLastName) ? worker.coordinatorFirstName + ' ' + worker.coordinatorLastName : 'N/A'}} {{worker.coordinatorLastName}}</td></tr>
-          <tr ng-show="worker.children"><th>Children</th><th>First Name</th><th>Last Name</th><th></th></tr>
+          <tr ng-show="worker.children"><th>Child CFID</th><th>First Name</th><th>Last Name</th><th></th></tr>
           <tr ng-repeat="child in worker.children">
-            <td></td>
+            <td class="readable">{{child.cfid}}</td>
             <td class="readable">{{child.firstName}}</td>
             <td class="readable">{{child.lastName}}</td>
             <td><button class="btn btn-primary" data-toggle="modal" data-target="#myModal" ng-click="setChildForModal(child, worker)">Change Worker</button></td>
